// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MessageExportSettings should match snapshot, disabled, actiance 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
  role="form"
>
  <div
    className="wrapper--fixed"
  >
    <AdminHeader>
      <FormattedMessage
        defaultMessage="Compliance Export (Beta)"
        id="admin.complianceExport.title"
      />
    </AdminHeader>
    <SettingsGroup
      container={true}
      show={true}
    >
      <BooleanSetting
        disabled={false}
        falseText={
          <FormattedMessage
            defaultMessage="false"
            id="admin.false"
          />
        }
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="When true, Mattermost will export all messages that were posted in the last 24 hours. The export task is scheduled to run once per day. See [the documentation](!https://about.mattermost.com/default-compliance-export-documentation) to learn more."
            id="admin.service.complianceExportDesc"
          />
        }
        id="enableComplianceExport"
        label={
          <FormattedMessage
            defaultMessage="Enable Compliance Export:"
            id="admin.service.complianceExportTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        trueText={
          <FormattedMessage
            defaultMessage="true"
            id="admin.true"
          />
        }
        value={false}
      />
      <AdminTextSetting
        disabled={true}
        helpText={
          <FormattedMessage
            defaultMessage="Set the start time of the daily scheduled compliance export job. Choose a time when fewer people are using your system. Must be a 24-hour time stamp in the form HH:MM."
            id="admin.complianceExport.exportJobStartTime.description"
          />
        }
        id="exportJobStartTime"
        label={
          <FormattedMessage
            defaultMessage="Compliance Export Time:"
            id="admin.complianceExport.exportJobStartTime.title"
          />
        }
        onChange={[Function]}
        placeholder="E.g.: \\"02:00\\""
        setByEnv={false}
        value="01:00"
      />
      <DropdownSetting
        disabled={true}
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="Format of the compliance export. Corresponds to the system that you want to import the data into.\\\\n \\\\nFor Actiance XML, compliance export files are written to the \\\\\\"exports\\\\\\" subdirectory of the configured [Local Storage Directory]({siteURL}/admin_console/environment/file_storage). For Global Relay EML, they are emailed to the configured email address."
            id="admin.complianceExport.exportFormat.description"
            values={
              Object {
                "siteURL": "http://localhost:8065",
              }
            }
          />
        }
        id="exportFormat"
        isDisabled={false}
        label={
          <FormattedMessage
            defaultMessage="Export Format:"
            id="admin.complianceExport.exportFormat.title"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value="actiance"
        values={
          Array [
            Object {
              "text": "Actiance XML",
              "value": "actiance",
            },
            Object {
              "text": "CSV",
              "value": "csv",
            },
            Object {
              "text": "GlobalRelay EML",
              "value": "globalrelay",
            },
          ]
        }
      />
      <Connect(injectIntl(JobTable))
        createJobButtonText={
          <FormattedMessage
            defaultMessage="Run Compliance Export Job Now"
            id="admin.complianceExport.createJob.title"
          />
        }
        createJobHelpText={
          <FormattedMessage
            defaultMessage="Initiates a Compliance Export job immediately."
            id="admin.complianceExport.createJob.help"
          />
        }
        disabled={true}
        getExtraInfoText={[Function]}
        jobType="message_export"
      />
    </SettingsGroup>
    <div
      className="admin-console-save"
    >
      <SaveButton
        btnClass="btn-primary"
        defaultMessage={
          <FormattedMessage
            defaultMessage="Save"
            id="save_button.save"
          />
        }
        disabled={true}
        extraClasses=""
        onClick={[Function]}
        saving={false}
        savingMessage="Saving Config..."
      />
      <div
        className="error-message"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <FormError
          error={null}
          errors={Array []}
        />
      </div>
      <Overlay
        animation={[Function]}
        placement="top"
        rootClose={false}
        show={false}
      >
        <Tooltip
          bsClass="tooltip"
          id="error-tooltip"
          placement="right"
        />
      </Overlay>
    </div>
  </div>
</form>
`;

exports[`components/MessageExportSettings should match snapshot, disabled, globalrelay 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
  role="form"
>
  <div
    className="wrapper--fixed"
  >
    <AdminHeader>
      <FormattedMessage
        defaultMessage="Compliance Export (Beta)"
        id="admin.complianceExport.title"
      />
    </AdminHeader>
    <SettingsGroup
      container={true}
      show={true}
    >
      <BooleanSetting
        disabled={false}
        falseText={
          <FormattedMessage
            defaultMessage="false"
            id="admin.false"
          />
        }
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="When true, Mattermost will export all messages that were posted in the last 24 hours. The export task is scheduled to run once per day. See [the documentation](!https://about.mattermost.com/default-compliance-export-documentation) to learn more."
            id="admin.service.complianceExportDesc"
          />
        }
        id="enableComplianceExport"
        label={
          <FormattedMessage
            defaultMessage="Enable Compliance Export:"
            id="admin.service.complianceExportTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        trueText={
          <FormattedMessage
            defaultMessage="true"
            id="admin.true"
          />
        }
        value={false}
      />
      <AdminTextSetting
        disabled={true}
        helpText={
          <FormattedMessage
            defaultMessage="Set the start time of the daily scheduled compliance export job. Choose a time when fewer people are using your system. Must be a 24-hour time stamp in the form HH:MM."
            id="admin.complianceExport.exportJobStartTime.description"
          />
        }
        id="exportJobStartTime"
        label={
          <FormattedMessage
            defaultMessage="Compliance Export Time:"
            id="admin.complianceExport.exportJobStartTime.title"
          />
        }
        onChange={[Function]}
        placeholder="E.g.: \\"02:00\\""
        setByEnv={false}
        value="01:00"
      />
      <DropdownSetting
        disabled={true}
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="Format of the compliance export. Corresponds to the system that you want to import the data into.\\\\n \\\\nFor Actiance XML, compliance export files are written to the \\\\\\"exports\\\\\\" subdirectory of the configured [Local Storage Directory]({siteURL}/admin_console/environment/file_storage). For Global Relay EML, they are emailed to the configured email address."
            id="admin.complianceExport.exportFormat.description"
            values={
              Object {
                "siteURL": "http://localhost:8065",
              }
            }
          />
        }
        id="exportFormat"
        isDisabled={false}
        label={
          <FormattedMessage
            defaultMessage="Export Format:"
            id="admin.complianceExport.exportFormat.title"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value="globalrelay"
        values={
          Array [
            Object {
              "text": "Actiance XML",
              "value": "actiance",
            },
            Object {
              "text": "CSV",
              "value": "csv",
            },
            Object {
              "text": "GlobalRelay EML",
              "value": "globalrelay",
            },
          ]
        }
      />
      <SettingsGroup
        container={true}
        id="globalRelaySettings"
        show={true}
      >
        <RadioSetting
          disabled={true}
          helpText={
            <FormattedMessage
              defaultMessage="The type of GlobalRelay customer account that your organization has."
              id="admin.complianceExport.globalRelayCustomerType.description"
            />
          }
          id="globalRelayCustomerType"
          label={
            <FormattedMessage
              defaultMessage="Customer Type:"
              id="admin.complianceExport.globalRelayCustomerType.title"
            />
          }
          onChange={[Function]}
          setByEnv={false}
          value="A10"
          values={
            Array [
              Object {
                "text": "A9/Type 9",
                "value": "A9",
              },
              Object {
                "text": "A10/Type 10",
                "value": "A10",
              },
            ]
          }
        />
        <AdminTextSetting
          disabled={true}
          helpText={
            <FormattedMessage
              defaultMessage="The username that is used to authenticate against the GlobalRelay SMTP server."
              id="admin.complianceExport.globalRelaySmtpUsername.description"
            />
          }
          id="globalRelaySmtpUsername"
          label={
            <FormattedMessage
              defaultMessage="SMTP Username:"
              id="admin.complianceExport.globalRelaySmtpUsername.title"
            />
          }
          onChange={[Function]}
          placeholder="E.g.: \\"globalRelayUser\\""
          setByEnv={false}
          value="globalRelayUser"
        />
        <AdminTextSetting
          disabled={true}
          helpText={
            <FormattedMessage
              defaultMessage="The password that is used to authenticate against the GlobalRelay SMTP server."
              id="admin.complianceExport.globalRelaySmtpPassword.description"
            />
          }
          id="globalRelaySmtpPassword"
          label={
            <FormattedMessage
              defaultMessage="SMTP Password:"
              id="admin.complianceExport.globalRelaySmtpPassword.title"
            />
          }
          onChange={[Function]}
          placeholder="E.g.: \\"globalRelayPassword\\""
          setByEnv={false}
          value="globalRelayPassword"
        />
        <AdminTextSetting
          disabled={true}
          helpText={
            <FormattedMessage
              defaultMessage="The email address that your GlobalRelay server monitors for incoming Compliance Exports."
              id="admin.complianceExport.globalRelayEmailAddress.description"
            />
          }
          id="globalRelayEmailAddress"
          label={
            <FormattedMessage
              defaultMessage="Email Address:"
              id="admin.complianceExport.globalRelayEmailAddress.title"
            />
          }
          onChange={[Function]}
          placeholder="E.g.: \\"globalrelay@mattermost.com\\""
          setByEnv={false}
          value="globalRelay@mattermost.com"
        />
      </SettingsGroup>
      <Connect(injectIntl(JobTable))
        createJobButtonText={
          <FormattedMessage
            defaultMessage="Run Compliance Export Job Now"
            id="admin.complianceExport.createJob.title"
          />
        }
        createJobHelpText={
          <FormattedMessage
            defaultMessage="Initiates a Compliance Export job immediately."
            id="admin.complianceExport.createJob.help"
          />
        }
        disabled={true}
        getExtraInfoText={[Function]}
        jobType="message_export"
      />
    </SettingsGroup>
    <div
      className="admin-console-save"
    >
      <SaveButton
        btnClass="btn-primary"
        defaultMessage={
          <FormattedMessage
            defaultMessage="Save"
            id="save_button.save"
          />
        }
        disabled={true}
        extraClasses=""
        onClick={[Function]}
        saving={false}
        savingMessage="Saving Config..."
      />
      <div
        className="error-message"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <FormError
          error={null}
          errors={Array []}
        />
      </div>
      <Overlay
        animation={[Function]}
        placement="top"
        rootClose={false}
        show={false}
      >
        <Tooltip
          bsClass="tooltip"
          id="error-tooltip"
          placement="right"
        />
      </Overlay>
    </div>
  </div>
</form>
`;

exports[`components/MessageExportSettings should match snapshot, enabled, actiance 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
  role="form"
>
  <div
    className="wrapper--fixed"
  >
    <AdminHeader>
      <FormattedMessage
        defaultMessage="Compliance Export (Beta)"
        id="admin.complianceExport.title"
      />
    </AdminHeader>
    <SettingsGroup
      container={true}
      show={true}
    >
      <BooleanSetting
        disabled={false}
        falseText={
          <FormattedMessage
            defaultMessage="false"
            id="admin.false"
          />
        }
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="When true, Mattermost will export all messages that were posted in the last 24 hours. The export task is scheduled to run once per day. See [the documentation](!https://about.mattermost.com/default-compliance-export-documentation) to learn more."
            id="admin.service.complianceExportDesc"
          />
        }
        id="enableComplianceExport"
        label={
          <FormattedMessage
            defaultMessage="Enable Compliance Export:"
            id="admin.service.complianceExportTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        trueText={
          <FormattedMessage
            defaultMessage="true"
            id="admin.true"
          />
        }
        value={true}
      />
      <AdminTextSetting
        disabled={false}
        helpText={
          <FormattedMessage
            defaultMessage="Set the start time of the daily scheduled compliance export job. Choose a time when fewer people are using your system. Must be a 24-hour time stamp in the form HH:MM."
            id="admin.complianceExport.exportJobStartTime.description"
          />
        }
        id="exportJobStartTime"
        label={
          <FormattedMessage
            defaultMessage="Compliance Export Time:"
            id="admin.complianceExport.exportJobStartTime.title"
          />
        }
        onChange={[Function]}
        placeholder="E.g.: \\"02:00\\""
        setByEnv={false}
        value="01:00"
      />
      <DropdownSetting
        disabled={false}
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="Format of the compliance export. Corresponds to the system that you want to import the data into.\\\\n \\\\nFor Actiance XML, compliance export files are written to the \\\\\\"exports\\\\\\" subdirectory of the configured [Local Storage Directory]({siteURL}/admin_console/environment/file_storage). For Global Relay EML, they are emailed to the configured email address."
            id="admin.complianceExport.exportFormat.description"
            values={
              Object {
                "siteURL": "http://localhost:8065",
              }
            }
          />
        }
        id="exportFormat"
        isDisabled={false}
        label={
          <FormattedMessage
            defaultMessage="Export Format:"
            id="admin.complianceExport.exportFormat.title"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value="actiance"
        values={
          Array [
            Object {
              "text": "Actiance XML",
              "value": "actiance",
            },
            Object {
              "text": "CSV",
              "value": "csv",
            },
            Object {
              "text": "GlobalRelay EML",
              "value": "globalrelay",
            },
          ]
        }
      />
      <Connect(injectIntl(JobTable))
        createJobButtonText={
          <FormattedMessage
            defaultMessage="Run Compliance Export Job Now"
            id="admin.complianceExport.createJob.title"
          />
        }
        createJobHelpText={
          <FormattedMessage
            defaultMessage="Initiates a Compliance Export job immediately."
            id="admin.complianceExport.createJob.help"
          />
        }
        disabled={false}
        getExtraInfoText={[Function]}
        jobType="message_export"
      />
    </SettingsGroup>
    <div
      className="admin-console-save"
    >
      <SaveButton
        btnClass="btn-primary"
        defaultMessage={
          <FormattedMessage
            defaultMessage="Save"
            id="save_button.save"
          />
        }
        disabled={true}
        extraClasses=""
        onClick={[Function]}
        saving={false}
        savingMessage="Saving Config..."
      />
      <div
        className="error-message"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <FormError
          error={null}
          errors={Array []}
        />
      </div>
      <Overlay
        animation={[Function]}
        placement="top"
        rootClose={false}
        show={false}
      >
        <Tooltip
          bsClass="tooltip"
          id="error-tooltip"
          placement="right"
        />
      </Overlay>
    </div>
  </div>
</form>
`;

exports[`components/MessageExportSettings should match snapshot, enabled, globalrelay 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
  role="form"
>
  <div
    className="wrapper--fixed"
  >
    <AdminHeader>
      <FormattedMessage
        defaultMessage="Compliance Export (Beta)"
        id="admin.complianceExport.title"
      />
    </AdminHeader>
    <SettingsGroup
      container={true}
      show={true}
    >
      <BooleanSetting
        disabled={false}
        falseText={
          <FormattedMessage
            defaultMessage="false"
            id="admin.false"
          />
        }
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="When true, Mattermost will export all messages that were posted in the last 24 hours. The export task is scheduled to run once per day. See [the documentation](!https://about.mattermost.com/default-compliance-export-documentation) to learn more."
            id="admin.service.complianceExportDesc"
          />
        }
        id="enableComplianceExport"
        label={
          <FormattedMessage
            defaultMessage="Enable Compliance Export:"
            id="admin.service.complianceExportTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        trueText={
          <FormattedMessage
            defaultMessage="true"
            id="admin.true"
          />
        }
        value={true}
      />
      <AdminTextSetting
        disabled={false}
        helpText={
          <FormattedMessage
            defaultMessage="Set the start time of the daily scheduled compliance export job. Choose a time when fewer people are using your system. Must be a 24-hour time stamp in the form HH:MM."
            id="admin.complianceExport.exportJobStartTime.description"
          />
        }
        id="exportJobStartTime"
        label={
          <FormattedMessage
            defaultMessage="Compliance Export Time:"
            id="admin.complianceExport.exportJobStartTime.title"
          />
        }
        onChange={[Function]}
        placeholder="E.g.: \\"02:00\\""
        setByEnv={false}
        value="01:00"
      />
      <DropdownSetting
        disabled={false}
        helpText={
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="Format of the compliance export. Corresponds to the system that you want to import the data into.\\\\n \\\\nFor Actiance XML, compliance export files are written to the \\\\\\"exports\\\\\\" subdirectory of the configured [Local Storage Directory]({siteURL}/admin_console/environment/file_storage). For Global Relay EML, they are emailed to the configured email address."
            id="admin.complianceExport.exportFormat.description"
            values={
              Object {
                "siteURL": "http://localhost:8065",
              }
            }
          />
        }
        id="exportFormat"
        isDisabled={false}
        label={
          <FormattedMessage
            defaultMessage="Export Format:"
            id="admin.complianceExport.exportFormat.title"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value="globalrelay"
        values={
          Array [
            Object {
              "text": "Actiance XML",
              "value": "actiance",
            },
            Object {
              "text": "CSV",
              "value": "csv",
            },
            Object {
              "text": "GlobalRelay EML",
              "value": "globalrelay",
            },
          ]
        }
      />
      <SettingsGroup
        container={true}
        id="globalRelaySettings"
        show={true}
      >
        <RadioSetting
          disabled={false}
          helpText={
            <FormattedMessage
              defaultMessage="The type of GlobalRelay customer account that your organization has."
              id="admin.complianceExport.globalRelayCustomerType.description"
            />
          }
          id="globalRelayCustomerType"
          label={
            <FormattedMessage
              defaultMessage="Customer Type:"
              id="admin.complianceExport.globalRelayCustomerType.title"
            />
          }
          onChange={[Function]}
          setByEnv={false}
          value="A10"
          values={
            Array [
              Object {
                "text": "A9/Type 9",
                "value": "A9",
              },
              Object {
                "text": "A10/Type 10",
                "value": "A10",
              },
            ]
          }
        />
        <AdminTextSetting
          disabled={false}
          helpText={
            <FormattedMessage
              defaultMessage="The username that is used to authenticate against the GlobalRelay SMTP server."
              id="admin.complianceExport.globalRelaySmtpUsername.description"
            />
          }
          id="globalRelaySmtpUsername"
          label={
            <FormattedMessage
              defaultMessage="SMTP Username:"
              id="admin.complianceExport.globalRelaySmtpUsername.title"
            />
          }
          onChange={[Function]}
          placeholder="E.g.: \\"globalRelayUser\\""
          setByEnv={false}
          value="globalRelayUser"
        />
        <AdminTextSetting
          disabled={false}
          helpText={
            <FormattedMessage
              defaultMessage="The password that is used to authenticate against the GlobalRelay SMTP server."
              id="admin.complianceExport.globalRelaySmtpPassword.description"
            />
          }
          id="globalRelaySmtpPassword"
          label={
            <FormattedMessage
              defaultMessage="SMTP Password:"
              id="admin.complianceExport.globalRelaySmtpPassword.title"
            />
          }
          onChange={[Function]}
          placeholder="E.g.: \\"globalRelayPassword\\""
          setByEnv={false}
          value="globalRelayPassword"
        />
        <AdminTextSetting
          disabled={false}
          helpText={
            <FormattedMessage
              defaultMessage="The email address that your GlobalRelay server monitors for incoming Compliance Exports."
              id="admin.complianceExport.globalRelayEmailAddress.description"
            />
          }
          id="globalRelayEmailAddress"
          label={
            <FormattedMessage
              defaultMessage="Email Address:"
              id="admin.complianceExport.globalRelayEmailAddress.title"
            />
          }
          onChange={[Function]}
          placeholder="E.g.: \\"globalrelay@mattermost.com\\""
          setByEnv={false}
          value="globalRelay@mattermost.com"
        />
      </SettingsGroup>
      <Connect(injectIntl(JobTable))
        createJobButtonText={
          <FormattedMessage
            defaultMessage="Run Compliance Export Job Now"
            id="admin.complianceExport.createJob.title"
          />
        }
        createJobHelpText={
          <FormattedMessage
            defaultMessage="Initiates a Compliance Export job immediately."
            id="admin.complianceExport.createJob.help"
          />
        }
        disabled={false}
        getExtraInfoText={[Function]}
        jobType="message_export"
      />
    </SettingsGroup>
    <div
      className="admin-console-save"
    >
      <SaveButton
        btnClass="btn-primary"
        defaultMessage={
          <FormattedMessage
            defaultMessage="Save"
            id="save_button.save"
          />
        }
        disabled={true}
        extraClasses=""
        onClick={[Function]}
        saving={false}
        savingMessage="Saving Config..."
      />
      <div
        className="error-message"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <FormError
          error={null}
          errors={Array []}
        />
      </div>
      <Overlay
        animation={[Function]}
        placement="top"
        rootClose={false}
        show={false}
      >
        <Tooltip
          bsClass="tooltip"
          id="error-tooltip"
          placement="right"
        />
      </Overlay>
    </div>
  </div>
</form>
`;
